methods.picture.MethodsPicture.scala.error
Compilation error:
MethodsPicture:10: error: not enough arguments for method carre: (c: java.awt.Color)Unit.
Unspecified value parameter c.
    carre(); 
         ^